# messari-fun

./: .gitignore  CMakeLists.txt  README.md  benchmarkProgram.sh  main.cpp  makeClean
src/: main.cpp
